<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:background="@drawable/user_item_bg"
    android:padding="4sp"
    android:layout_margin="4sp"
    android:orientation="vertical"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/textName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        android:textSize="18sp"
        android:text="@string/user_name" />

    <TextView
        android:id="@+id/textEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@android:color/white"
        android:textStyle="italic"
        android:textSize="18sp"
        android:text="@string/user_email" />

    <TextView
        android:id="@+id/textCountry"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@android:color/white"
        android:textStyle="italic"
        android:textSize="18sp"
        android:text="@string/user_country" />

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_margin="4sp"
        android:padding="4sp"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/buttonDelete"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:layout_margin="3dp"
            android:background="@android:color/holo_red_light"
            android:text="@string/delete"
            android:textColor="@android:color/white" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/buttonUpdate"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:layout_margin="3dp"
            android:background="@android:color/holo_blue_dark"
            android:text="@string/update"
            android:textColor="@android:color/white" />

    </LinearLayout>
</LinearLayout>